kubernetes/apps/unbound-xi-game/game-server/app/private-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unbound-private-game-server
  labels:
    app.kubernetes.io/name: unbound-game-server
    app.kubernetes.io/component: private-shard
    app.kubernetes.io/part-of: unbound-xi-game
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: unbound-game-server
    app.kubernetes.io/component: private-shard
    unbound-xi.dev/serving: "true"
  ports:
    - name: gameplay
      port: 7444
      targetPort: gameplay
      protocol: TCP
