kubernetes/apps/unbound-xi-game/game-server/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unbound-public-game-server-gameplay-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: unbound-game-server
      app.kubernetes.io/component: public-zone
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: unbound-gateway
      ports:
        - protocol: TCP
          port: 7444
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unbound-private-game-server-gameplay-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: unbound-game-server
      app.kubernetes.io/component: private-shard
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: unbound-gateway
      ports:
        - protocol: TCP
          port: 7444
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unbound-game-server-private-metrics
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: unbound-game-server
      app.kubernetes.io/component: public-zone
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 8083
